--- a/twitter_collect.ipynb
+++ b/twitter_collect.ipynb
@@ -56,6 +56,12 @@
    "outputs": [],
    "source": [
     "#1 change sub-topic\n",
+    "# climate change\n",
+    "# gun control\n",
+    "# medicare for all\n",
+    "# brexit\n",
+    "# north korea\n",
+    "# fake news\n",
     "searchQuery = \"NCAA OR College Basketball OR March Madness OR basketball -filter:retweets\""
    ]
   },
@@ -74,7 +80,7 @@
    ],
    "source": [
     "records = []\n",
-    "for record in limit_handled(tweepy.Cursor(api.search, q=searchQuery).items(2)):\n",
+    "for record in limit_handled(tweepy.Cursor(api.search, q=searchQuery).items()):\n",
     "    records.append(record._json)"
    ]
   },
