--- a/twitter_collect.ipynb
+++ b/twitter_collect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,25 @@
     "# brexit\n",
     "# north korea\n",
     "# fake news\n",
-    "searchQuery = \"NCAA OR College Basketball OR March Madness OR basketball -filter:retweets\""
+    "# searchQuery = \"brexit OR #brexit OR BREXIT OR #BREXIT -filter:retweets\"\n",
+    "# searchQuery = \"fake news OR #fakenews OR FAKENEWS OR #FAKENEWS -filter:retweets\"\n",
+    "searchQuery = \"north korea OR #northkorea OR NORTH KOREA OR #NORTHKOREA -filter:retweets\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit reached. Sleeping for: 855\n",
+      "Rate limit reached. Sleeping for: 855\n",
+      "Rate limit reached. Sleeping for: 857\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -80,13 +91,13 @@
    ],
    "source": [
     "records = []\n",
-    "for record in limit_handled(tweepy.Cursor(api.search, q=searchQuery).items()):\n",
+    "for record in limit_handled(tweepy.Cursor(api.search, q=searchQuery).items(10000)):\n",
     "    records.append(record._json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#2 change csv file name \n",
-    "df.to_csv(\"twitter_out.csv\")"
+    "df.to_csv(\"twitter_northkorea.csv\")"
    ]
   },
   {
@@ -127,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
