Add new results

--- a/NYT_collection.ipynb
+++ b/NYT_collection.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "from time import sleep\n",
     "import requests\n",
     "from dotenv import load_dotenv\n",
     "import pandas as pd\n",
@@ -18,20 +19,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page 0 of 24\n",
+      "Page 10 of 24\n",
+      "Page 20 of 24\n"
+     ]
+    }
+   ],
    "source": [
     "url = \"https://api.nytimes.com/svc/search/v2/articlesearch.json\"\n",
     "\n",
     "#2 change sub-topic name\n",
     "# climate+change 80 pages\n",
     "# fake+news 50 pages\n",
-    "# gun+control 35 pages\n",
-    "# medicare+for+all 22 pages\n",
+    "# gun+control 38 pages\n",
+    "# medicare+for+all 24 pages\n",
     "# brexit 95 pages\n",
     "# north+korea 50 pages\n",
-    "params = {'q': 'climate+change', \n",
+    "# illegal+immigration 40 pages\n",
+    "params = {'q': 'medicare+for+all', \n",
     "          'api-key': nytimes_key, 'page': 0, \n",
     "          'fl': '_id,web_url,pub_date,document_type,head_line,news_desk,source,subsection_name,snippet',\n",
     "          'fq': 'pub_year:2019'\n",
@@ -41,27 +53,29 @@
     "\n",
     "\n",
     "#3 change number of pages here\n",
-    "num_pages = 2\n",
+    "num_pages = 24\n",
     "for i in range(num_pages):\n",
     "    results = requests.get(url=url, params=params)\n",
+    "    if params['page']%10 == 0:\n",
+    "        print(\"Page %d of %d\" % (i, num_pages))\n",
     "    params['page'] += 1\n",
     "    data = results.json()\n",
     "    result_list += data['response']['docs']\n",
-    "    "
+    "    sleep(7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "240"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,13 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#4 change file name here based on sub-topic\n",
-    "df.to_csv(\"./nyt_out.csv\")"
+    "df.to_csv(\"./input/raw/nyt_medicareforall.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
