--- a/twitter_collect.ipynb
+++ b/twitter_collect.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AT9DJaTTv8Zn14Dl1neywfWp4'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import time\n",
     "import tweepy\n",
@@ -62,9 +73,10 @@
     "# brexit\n",
     "# north korea\n",
     "# fake news\n",
+    "# illegal immigration\n",
     "# searchQuery = \"brexit OR #brexit OR BREXIT OR #BREXIT -filter:retweets\"\n",
     "# searchQuery = \"fake news OR #fakenews OR FAKENEWS OR #FAKENEWS -filter:retweets\"\n",
-    "searchQuery = \"north korea OR #northkorea OR NORTH KOREA OR #NORTHKOREA -filter:retweets\""
+    "searchQuery = \"guncontrol OR gun control #guncontrol -filter:retweets\""
    ]
   },
   {
@@ -73,25 +85,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rate limit reached. Sleeping for: 855\n",
-      "Rate limit reached. Sleeping for: 855\n",
-      "Rate limit reached. Sleeping for: 857\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Collecting tweets...\n",
       "End of iterations reached\n"
      ]
     }
    ],
    "source": [
     "records = []\n",
-    "for record in limit_handled(tweepy.Cursor(api.search, q=searchQuery).items(10000)):\n",
+    "print(\"Collecting tweets...\")\n",
+    "for record in limit_handled(tweepy.Cursor(api.search, q=searchQuery).items(15000)):\n",
     "    records.append(record._json)"
    ]
   },
@@ -111,7 +116,7 @@
    "outputs": [],
    "source": [
     "#2 change csv file name \n",
-    "df.to_csv(\"twitter_northkorea.csv\")"
+    "df.to_csv(\"input/raw/twitter_guncontrol.csv\")"
    ]
   },
   {
@@ -138,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
