Final commit for notebooks

--- a/twitter_collect.ipynb
+++ b/twitter_collect.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'AT9DJaTTv8Zn14Dl1neywfWp4'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import tweepy\n",
@@ -76,7 +65,8 @@
     "# illegal immigration\n",
     "# searchQuery = \"brexit OR #brexit OR BREXIT OR #BREXIT -filter:retweets\"\n",
     "# searchQuery = \"fake news OR #fakenews OR FAKENEWS OR #FAKENEWS -filter:retweets\"\n",
-    "searchQuery = \"guncontrol OR gun control #guncontrol -filter:retweets\""
+    "# searchQuery = \"baseball OR base ball OR mlb OR #baseball OR #mlb -filter:retweets\"\n",
+    "searchQuery = \"basketball OR basket ball OR nba OR wnba OR #nba OR #wnba OR #basketball -filter:retweets\""
    ]
   },
   {
@@ -88,7 +78,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting tweets...\n",
+      "Collecting tweets...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit reached. Sleeping for: 861\n",
+      "Rate limit reached. Sleeping for: 861\n",
+      "Rate limit reached. Sleeping for: 861\n",
+      "Rate limit reached. Sleeping for: 861\n",
+      "Rate limit reached. Sleeping for: 866\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "End of iterations reached\n"
      ]
     }
@@ -116,7 +123,7 @@
    "outputs": [],
    "source": [
     "#2 change csv file name \n",
-    "df.to_csv(\"input/raw/twitter_guncontrol.csv\")"
+    "df.to_csv(\"input/raw/twitter_basketball.csv\")"
    ]
   },
   {
