--- a/twitter_process.ipynb
+++ b/twitter_process.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "#1 change file name\n",
-    "df = pd.read_csv(\"./input/raw/twitter_illegalimmigration.csv\")"
+    "df = pd.read_csv(\"./input/raw/twitter_nfl.csv\")"
    ]
   },
   {
@@ -58,6 +58,7 @@
        "      <th>geo</th>\n",
        "      <th>id</th>\n",
        "      <th>...</th>\n",
+       "      <th>possibly_sensitive</th>\n",
        "      <th>quoted_status</th>\n",
        "      <th>quoted_status_id</th>\n",
        "      <th>quoted_status_id_str</th>\n",
@@ -67,7 +68,6 @@
        "      <th>text</th>\n",
        "      <th>truncated</th>\n",
        "      <th>user</th>\n",
-       "      <th>withheld_in_countries</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -76,177 +76,184 @@
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Thu Apr 04 18:34:47 +0000 2019</td>\n",
+       "      <td>Sun Apr 14 10:03:39 +0000 2019</td>\n",
        "      <td>{'hashtags': [], 'symbols': [], 'user_mentions...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1113872560087638016</td>\n",
+       "      <td>1117367806562111488</td>\n",
        "      <td>...</td>\n",
+       "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
-       "      <td>@politico How about closing the border until d...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 760982697736933376, 'id_str': '76098269...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2018/2019 Cleveland Browns NFL Jersey Odell Be...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>{'id': 1048906772063420419, 'id_str': '1048906...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Thu Apr 04 18:34:31 +0000 2019</td>\n",
+       "      <td>Sat Apr 13 15:05:47 +0000 2019</td>\n",
        "      <td>{'hashtags': [], 'symbols': [], 'user_mentions...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1113872490336591872</td>\n",
+       "      <td>1117081451571372034</td>\n",
        "      <td>...</td>\n",
+       "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
-       "      <td>@akkcrystal36 @TexasTribune @JohnCornyn I didn...</td>\n",
+       "      <td>2018/2019 Cleveland Browns NFL Jersey Odell Be...</td>\n",
        "      <td>True</td>\n",
-       "      <td>{'id': 14432483, 'id_str': '14432483', 'name':...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>{'id': 1048906772063420419, 'id_str': '1048906...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Thu Apr 04 18:34:29 +0000 2019</td>\n",
-       "      <td>{'hashtags': [], 'symbols': [], 'user_mentions...</td>\n",
+       "      <td>Sat Apr 13 14:46:55 +0000 2019</td>\n",
+       "      <td>{'hashtags': [{'text': 'FortMyers', 'indices':...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1113872482560139264</td>\n",
+       "      <td>1117076703560589314</td>\n",
        "      <td>...</td>\n",
+       "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/#!/download/ipad\" ...</td>\n",
-       "      <td>@IngrahamAngle A year?  When they estimate 100...</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com\" rel=\"nofollow\"&gt;Tw...</td>\n",
+       "      <td>A @MiamiDolphins player was wrongly arrested b...</td>\n",
        "      <td>True</td>\n",
-       "      <td>{'id': 825069400524935168, 'id_str': '82506940...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>{'id': 441214858, 'id_str': '441214858', 'name...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Thu Apr 04 18:34:21 +0000 2019</td>\n",
-       "      <td>{'hashtags': [], 'symbols': [], 'user_mentions...</td>\n",
+       "      <td>Sat Apr 13 12:59:09 +0000 2019</td>\n",
+       "      <td>{'hashtags': [{'text': 'nygiants', 'indices': ...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1113872450880598016</td>\n",
+       "      <td>1117049584931393536</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
-       "      <td>@MARAlSARREAGA @darkpredicts trump is against ...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'id': 1011100884946702337, 'id_str': '1011100...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>&lt;a href=\"http://instagram.com\" rel=\"nofollow\"&gt;...</td>\n",
+       "      <td>Apply Pressure Make 💎s\\r\\n🐐📈\\r\\n\\r\\n#nygiants ...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>{'id': 379353543, 'id_str': '379353543', 'name...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Thu Apr 04 18:34:17 +0000 2019</td>\n",
+       "      <td>Fri Apr 12 15:53:25 +0000 2019</td>\n",
        "      <td>{'hashtags': [], 'symbols': [], 'user_mentions...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1113872432602013697</td>\n",
+       "      <td>1116731053887172608</td>\n",
        "      <td>...</td>\n",
+       "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>&lt;a href=\"https://mobile.twitter.com\" rel=\"nofo...</td>\n",
-       "      <td>@Donadeedooda The presence of 20 million + ill...</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com\" rel=\"nofollow\"&gt;Tw...</td>\n",
+       "      <td>2018/2019 Cleveland Browns NFL Jersey Odell Be...</td>\n",
        "      <td>True</td>\n",
-       "      <td>{'id': 1629339452, 'id_str': '1629339452', 'na...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>{'id': 1048906772063420419, 'id_str': '1048906...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>5 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  contributors coordinates                      created_at  \\\n",
-       "0           0           NaN         NaN  Thu Apr 04 18:34:47 +0000 2019   \n",
-       "1           1           NaN         NaN  Thu Apr 04 18:34:31 +0000 2019   \n",
-       "2           2           NaN         NaN  Thu Apr 04 18:34:29 +0000 2019   \n",
-       "3           3           NaN         NaN  Thu Apr 04 18:34:21 +0000 2019   \n",
-       "4           4           NaN         NaN  Thu Apr 04 18:34:17 +0000 2019   \n",
+       "   Unnamed: 0  contributors  coordinates                      created_at  \\\n",
+       "0           0           NaN          NaN  Sun Apr 14 10:03:39 +0000 2019   \n",
+       "1           1           NaN          NaN  Sat Apr 13 15:05:47 +0000 2019   \n",
+       "2           2           NaN          NaN  Sat Apr 13 14:46:55 +0000 2019   \n",
+       "3           3           NaN          NaN  Sat Apr 13 12:59:09 +0000 2019   \n",
+       "4           4           NaN          NaN  Fri Apr 12 15:53:25 +0000 2019   \n",
        "\n",
        "                                            entities extended_entities  \\\n",
        "0  {'hashtags': [], 'symbols': [], 'user_mentions...               NaN   \n",
        "1  {'hashtags': [], 'symbols': [], 'user_mentions...               NaN   \n",
-       "2  {'hashtags': [], 'symbols': [], 'user_mentions...               NaN   \n",
-       "3  {'hashtags': [], 'symbols': [], 'user_mentions...               NaN   \n",
+       "2  {'hashtags': [{'text': 'FortMyers', 'indices':...               NaN   \n",
+       "3  {'hashtags': [{'text': 'nygiants', 'indices': ...               NaN   \n",
        "4  {'hashtags': [], 'symbols': [], 'user_mentions...               NaN   \n",
        "\n",
-       "   favorite_count  favorited  geo                   id  ...  quoted_status  \\\n",
-       "0               0      False  NaN  1113872560087638016  ...            NaN   \n",
-       "1               0      False  NaN  1113872490336591872  ...            NaN   \n",
-       "2               0      False  NaN  1113872482560139264  ...            NaN   \n",
-       "3               0      False  NaN  1113872450880598016  ...            NaN   \n",
-       "4               0      False  NaN  1113872432602013697  ...            NaN   \n",
+       "   favorite_count  favorited  geo                   id  ...  \\\n",
+       "0               0      False  NaN  1117367806562111488  ...   \n",
+       "1               0      False  NaN  1117081451571372034  ...   \n",
+       "2               0      False  NaN  1117076703560589314  ...   \n",
+       "3               2      False  NaN  1117049584931393536  ...   \n",
+       "4               0      False  NaN  1116731053887172608  ...   \n",
        "\n",
-       "  quoted_status_id  quoted_status_id_str  retweet_count  retweeted  \\\n",
-       "0              NaN                   NaN              0      False   \n",
-       "1              NaN                   NaN              0      False   \n",
-       "2              NaN                   NaN              0      False   \n",
-       "3              NaN                   NaN              0      False   \n",
-       "4              NaN                   NaN              0      False   \n",
+       "   possibly_sensitive quoted_status  quoted_status_id  quoted_status_id_str  \\\n",
+       "0               False           NaN               NaN                   NaN   \n",
+       "1               False           NaN               NaN                   NaN   \n",
+       "2               False           NaN               NaN                   NaN   \n",
+       "3               False           NaN               NaN                   NaN   \n",
+       "4               False           NaN               NaN                   NaN   \n",
+       "\n",
+       "   retweet_count  retweeted  \\\n",
+       "0              0      False   \n",
+       "1              0      False   \n",
+       "2              0      False   \n",
+       "3              2      False   \n",
+       "4              0      False   \n",
        "\n",
        "                                              source  \\\n",
        "0  <a href=\"http://twitter.com/download/iphone\" r...   \n",
        "1  <a href=\"http://twitter.com/download/iphone\" r...   \n",
-       "2  <a href=\"http://twitter.com/#!/download/ipad\" ...   \n",
-       "3  <a href=\"http://twitter.com/download/iphone\" r...   \n",
-       "4  <a href=\"https://mobile.twitter.com\" rel=\"nofo...   \n",
+       "2  <a href=\"http://twitter.com\" rel=\"nofollow\">Tw...   \n",
+       "3  <a href=\"http://instagram.com\" rel=\"nofollow\">...   \n",
+       "4  <a href=\"http://twitter.com\" rel=\"nofollow\">Tw...   \n",
        "\n",
        "                                                text truncated  \\\n",
-       "0  @politico How about closing the border until d...     False   \n",
-       "1  @akkcrystal36 @TexasTribune @JohnCornyn I didn...      True   \n",
-       "2  @IngrahamAngle A year?  When they estimate 100...      True   \n",
-       "3  @MARAlSARREAGA @darkpredicts trump is against ...      True   \n",
-       "4  @Donadeedooda The presence of 20 million + ill...      True   \n",
+       "0  2018/2019 Cleveland Browns NFL Jersey Odell Be...      True   \n",
+       "1  2018/2019 Cleveland Browns NFL Jersey Odell Be...      True   \n",
+       "2  A @MiamiDolphins player was wrongly arrested b...      True   \n",
+       "3  Apply Pressure Make 💎s\\r\\n🐐📈\\r\\n\\r\\n#nygiants ...      True   \n",
+       "4  2018/2019 Cleveland Browns NFL Jersey Odell Be...      True   \n",
        "\n",
-       "                                                user withheld_in_countries  \n",
-       "0  {'id': 760982697736933376, 'id_str': '76098269...                   NaN  \n",
-       "1  {'id': 14432483, 'id_str': '14432483', 'name':...                   NaN  \n",
-       "2  {'id': 825069400524935168, 'id_str': '82506940...                   NaN  \n",
-       "3  {'id': 1011100884946702337, 'id_str': '1011100...                   NaN  \n",
-       "4  {'id': 1629339452, 'id_str': '1629339452', 'na...                   NaN  \n",
+       "                                                user  \n",
+       "0  {'id': 1048906772063420419, 'id_str': '1048906...  \n",
+       "1  {'id': 1048906772063420419, 'id_str': '1048906...  \n",
+       "2  {'id': 441214858, 'id_str': '441214858', 'name...  \n",
+       "3  {'id': 379353543, 'id_str': '379353543', 'name...  \n",
+       "4  {'id': 1048906772063420419, 'id_str': '1048906...  \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "[5 rows x 30 columns]"
       ]
      },
      "execution_count": 3,
@@ -303,7 +310,7 @@
    "outputs": [],
    "source": [
     "#2 change file name\n",
-    "file = open(\"input/mr/twitter_illegalimmigration.txt\", \"w\", encoding='utf-8')\n",
+    "file = open(\"input/mr/twitter_nfl.txt\", \"w\", encoding='utf-8')\n",
     "file.write(text)\n",
     "file.close()"
    ]
