--- a/collect_cc.ipynb
+++ b/collect_cc.ipynb
@@ -39,25 +39,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*] Trying target domain: http://www.espn.com/golf/story/*\n",
-      "[*] Trying index 2019-13\n",
-      "[*] Added 642 results.\n",
-      "[*] Trying index 2019-09\n",
-      "[*] Added 763 results.\n",
-      "[*] Trying index 2019-04\n",
-      "[*] Added 642 results.\n",
-      "[*] Found a total of 2047 hits.\n"
+      "Found a total of 2047 hits.\n"
      ]
     }
    ],
    "source": [
     "record_list = []\n",
     "\n",
-    "print(\"[*] Trying target domain: %s\" % domain)\n",
-    "\n",
     "for index in index_list:\n",
-    "\n",
-    "    print(\"[*] Trying index %s\" % index)\n",
     "\n",
     "    cc_url = \"http://index.commoncrawl.org/CC-MAIN-%s-index?\" % index\n",
     "    cc_url += \"url=%s&output=json\" % domain\n",
@@ -71,9 +60,7 @@
     "        for record in records:\n",
     "            record_list.append(json.loads(record))\n",
     "\n",
-    "        print(\"[*] Added %d results.\" % len(records))\n",
-    "\n",
-    "print(\"[*] Found a total of %d hits.\" % len(record_list))"
+    "print(\"Found a total of %d hits.\" % len(record_list))"
    ]
   },
   {
