--- a/filter_top_words.ipynb
+++ b/filter_top_words.ipynb
@@ -29,7 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 100\n",
+    "n = 10\n",
+    "# sort the word based on their count in descending order\n",
     "top_n_list = sorted(word_counts.items(), key=operator.itemgetter(1), reverse=True)[:n]\n",
     "top_n = \"\"\n",
     "for (word, count) in top_n_list:\n",
